# ustr-cmm

./: .gitignore  .gitmodules  CODE_REVIEW.md  MONEYMARKET_PLAN.md  PROPOSAL.md  README.md  SECURITY_REVIEW.md
.cursor/rules/: worksplit-best-practices.mdc  worksplit-jobs.mdc
.husky/: pre-commit
contracts/: .gitignore  Cargo.toml
contracts/contracts/airdrop/: Cargo.toml
contracts/contracts/airdrop/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/contracts/referral/: Cargo.toml
contracts/contracts/referral/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/contracts/treasury/: Cargo.toml
contracts/contracts/treasury/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/contracts/ustc-swap/: AUDIT_REPORT.md  Cargo.toml
contracts/contracts/ustc-swap/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/contracts/ustr-token/: Cargo.toml
contracts/contracts/wrap-mapper/: Cargo.toml
contracts/contracts/wrap-mapper/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/scripts/: README.md  deploy.sh  instantiate.json
docs/: ARCHITECTURE.md  CONTRACTS.md  DEPLOYMENT.md  ECONOMICS.md  README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  worksplit.toml
frontend/jobs/: _jobstatus.json  _managerinstruction.md  _systemprompt_create.md  _systemprompt_edit.md  _systemprompt_fix.md  _systemprompt_split.md  _systemprompt_test.md  _systemprompt_verify.md  _systempromt_split.md  price_001_types.md  price_002_constants.md  price_003_service.md  price_004_hook.md  price_005_treasury_types.md  price_006_assets_card.md  price_007_exports.md
frontend/public/: _redirects
frontend/public/assets/: tokenlist.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: index.ts
frontend/src/components/common/: Button.tsx  Card.tsx  CharacterParticles.tsx  CountdownTimer.tsx  TokenIcon.tsx  UnderConstruction.tsx  WalletButton.tsx  index.ts
frontend/src/components/dashboard/: BalanceCard.tsx  StatsCard.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/referral/: Leaderboard.tsx  index.ts
frontend/src/components/swap/: RateChart.tsx  SwapCard.tsx  index.ts
frontend/src/components/treasury/: IssuanceCard.tsx  RatiosCard.tsx  TreasuryAssetsCard.tsx  index.ts
frontend/src/hooks/: index.ts  useContract.ts  useLaunchStatus.ts  usePrices.ts  useReferralStorage.ts  useSwap.ts  useTickingRate.ts  useTokenHolders.ts  useTokenStats.ts  useTreasury.ts  useWallet.ts
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  ReferralPage.tsx  SwapPage.tsx  TreasuryPage.tsx
frontend/src/services/: contract.ts  price.ts  wallet.ts
frontend/src/stores/: wallet.ts
frontend/src/types/: contracts.ts  price.ts  treasury.ts
frontend/src/utils/: constants.ts  format.ts
plans/: CMM_AUCTION_PLAN.md  DEX_PERP_PLAN.md  DEX_PLAN.md  GAMEFI_PLAN.md  NATIVE_TOKEN_WRAPPING.md  PROPOSAL.md  README.md
