[workspace]
resolver = "2"

members = [
    "contracts/treasury",
    "contracts/ustc-swap",
    "contracts/airdrop",
    "contracts/referral",
    "packages/common",
    # External contracts (for testing - in production use deployed code IDs)
    "external/cw20-mintable",
]

[workspace.package]
version = "0.2.0"
authors = ["USTR CMM Team"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/ustr-cmm/ustr-cmm"

[workspace.dependencies]
cosmwasm-std = { version = "1.5.11", features = ["staking"] }
cosmwasm-schema = "1.5.9"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw-multi-test = "1.0.0"
thiserror = "1.0.4"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
base64ct = "=1.7.3"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

