[package]
name = "ustr-token"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "USTR CW20 mintable token for TerraClassic"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Disable export feature to enable library usage
library = []
cosmwasm_1_2 = ["cosmwasm-std/cosmwasm_1_2"]

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
thiserror.workspace = true
schemars.workspace = true
serde.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
cosmwasm-std.workspace = true

