[package]
name = "wrap-mapper"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wrap-mapper contract: orchestrates CW20 minting/burning for native token wrapping"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
cosmwasm_1_2 = ["cosmwasm-std/cosmwasm_1_2"]

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw20.workspace = true
thiserror.workspace = true
schemars.workspace = true
serde.workspace = true
common = { path = "../../packages/common" }

[dev-dependencies]
cw-multi-test.workspace = true
cosmwasm-std.workspace = true
treasury = { path = "../treasury", features = ["library"] }
cw20-mintable = { path = "../../external/cw20-mintable" }
cw20.workspace = true
